@@ -3,8 +3,9 @@ version 0.6.2 - xx-Dec-2008
  . CocosNode: added absolutePosition (issue #9 & issue #122)
  . CocosNode: tag is propagated when adding children (issue #118)
  . CocosNode: change change z-order at runtime (issue #59)
- . Demos: shows how to set multiple Touches and other options (issue #116)
+ . Demos: Chipmunk_Accel supports multiple touches (issue #129)
  . Demos: fixed type (issue #111)
+ . Demos: shows how to set multiple Touches and other options (issue #116)
  . Director: Touches work fast again (issue #126)
  . License: removed "GNU LGPL" from sources files (issue #115)
  . License: fixed grammar errors (issue #120)
